force-app/main/default/objects/BIS_Ibau_Backlink__mdt/BIS_Ibau_Backlink__mdt.object-meta.xml
<CustomObject>
    <label>BIS Ibau Backlink</label>
    <pluralLabel>BIS Ibau Backlinks</pluralLabel>
</CustomObject>