force-app/main/default/objects/BIS_Ibau_Backlink__mdt/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <label>Customer ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>