force-app/main/default/objects/BIS_Ibau_Backlink__mdt/fields/LinkTemplate__c.field-meta.xml
<CustomField>
    <fullName>LinkTemplate__c</fullName>
    <description>A stringtemplate with substitutable placeholders.</description>
    <label>LinkTemplate</label>
    <type>TextArea</type>
</CustomField>