force-app/main/default/objects/BIS_Ibau_Backlink__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>The password is already MD5 encrypted.</description>
    <label>Password</label>
    <length>80</length>
    <type>Text</type>
</CustomField>